--- a/3. Aspects of SMACSS/10. Depth of Applicability.md
+++ b/3. Aspects of SMACSS/10. Depth of Applicability.md
@@ -78,9 +78,9 @@ HTML похож на древовидную структуру из родите
 </div> 
 ```
 
-Мы пытаемся найти баланс между обслуживанием, производительностью и читабельностью. Слишком глубокая вложенность может привести к меньшему количеству классов в вашей разметке, но это увеличивает затраты на обслуживание и ухудшает читабельность. Также вам не нужно добавлять классы ко всему подряд. Добавление классов к `h3` или `ul` в данном примере было бы излишеством, если бы нам не требовалась ещё более гибкая система.
+Мы пытаемся найти баланс между возможностью легко поддерживать сайт, производительностью и читабельностью. Слишком глубокая вложенность может привести к меньшему количеству классов в вашей разметке, но это увеличивает затраты на обслуживание и ухудшает читабельность. Также вам не нужно добавлять классы ко всему подряд. Добавление классов к `h3` или `ul` в данном примере было бы излишеством, если бы нам не требовалась ещё более гибкая система.
 
-Рассмотрим последний пример ещё глубже. Этот шаблон проектирования является довольно распространённым. Это контейнер с заголовком и содержимым. (Иногда в него также будет входить футер). В конкретно этом примере внутри контейнера располагается `ul`, но это также может быть и `ol` или `div`.
+Рассмотрим последний пример ещё глубже. Этот шаблон проектирования является довольно распространённым. Это контейнер с заголовком и содержимым. (Иногда в него также будет входить подвал). В конкретно этом примере внутри контейнера располагается `ul`, но это также может быть и `ol` или `div`.
 
 Ещё раз, мы можем дублировать наши правила для каждой вариации.
 
