--- a/3. Aspects of SMACSS/11. Selector Performance.md
+++ b/3. Aspects of SMACSS/11. Selector Performance.md
@@ -37,7 +37,7 @@
 С помощью обработки справа налево браузер может быстрее определить, какие стили применяются к конкретному элементу, который должен быть отрисован на странице. Чтобы определить, какой селектор более или менее производителен, вам треубется понять, сколько узлов DOM должны быть обработаны перед применением стилей к элементу.
 
 ## Какие правила правят?
-Так как каждый элемент должен быть отрисован, браузеру нужно понять .какие стили применять к определённым элементам. Давайте взглянем на [рекомендации](http://code.google.com/speed/page-speed/docs/rendering.html#UseEfficientCSSSelectors) Google Page Speed. Есть четыре основных типа правил, которые признаны неэффективными:
+Так как каждый элемент должен быть отрисован, браузеру нужно понять, какие стили применять к определённым элементам. Давайте взглянем на [рекомендации](http://code.google.com/speed/page-speed/docs/rendering.html#UseEfficientCSSSelectors) Google Page Speed. Есть четыре основных типа правил, которые признаны неэффективными:
 
 * Правила с дочерними селекторами, например `#content h3`
 * Правила с селекторами по потомкам первого уровня, например `#content > h3`
