Update 6. Module rules.md
пунктуационные правки

--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -56,7 +56,7 @@
 
 Благодаря добавлению классов мы улучшили понимание смысла этих элементов и избавились от какой-либо неясности при их стилизации.
 
-**Если вы все же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Дргими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего только создадут вам дополнительные проблемы. Однако элементы, вроде заголовков, скорее всего появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведет ни к каким конфликтам.** — требует вычитки
+Если вы всё же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Другими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего, только создадут вам дополнительные проблемы. Однако элементы вроде заголовков, скорее всего, появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведёт ни к каким конфликтам.
 
 ## Новые контексты
 Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне вёрстки или в корне модуля.
@@ -148,8 +148,8 @@
 <div class="pod pod-callout"> ... </div>
 ```
 
-Вам следует быть осторожным из-за порядка загрузки ресурсов на странице. К примеру, в Yahoo! Mail мы имеем код, загружающийся из разных мест. У нас были как основные стили для кнопок, так и специальный набор стилей для страницы написания письма. Однако при нажатии на «Добавить контакт» загружался дополнительный компонент из другого продукта — адресной книги. (Да, адрессная книга - другой продукт внутри Yahoo!). Та, в свою очередь, загружала свои собственные стили кнопок, тем самым перезаписывая наши стили, применённые с помощью подклассов.
+Вам следует быть осторожным из-за порядка загрузки ресурсов на странице. К примеру, в Yahoo! Mail мы имеем код, загружающийся из разных мест. У нас были как основные стили для кнопок, так и специальный набор стилей для страницы написания письма. Однако при нажатии на «Добавить контакт» загружался дополнительный компонент из другого продукта — адресной книги. (Да, адресная книга — другой продукт внутри Yahoo!). Та, в свою очередь, загружала свои собственные стили кнопок, тем самым перезаписывая наши стили, применённые с помощью подклассов.
 
 Если порядок загрузки ресурсов в вашем проекте важен, то будьте готовы столкнуться с проблемами, связанными со специфичностью.
 
-Несмотря на то, что более специфичные части вёрстки с заданным идентификатором могут быть использованы для стилизации модулей, отказ от этого в пользу подклассов позволит ещё легче перемещать модуль в разные части сайта, избегая проблем со специфичностью. 
+Несмотря на то что более специфичные части вёрстки с заданным идентификатором могут быть использованы для стилизации модулей, отказ от этого в пользу подклассов позволит ещё легче перемещать модуль в разные части сайта, избегая проблем со специфичностью. 
