--- a/2. Core/8. Theme Rules.md
+++ b/2. Core/8. Theme Rules.md
@@ -2,7 +2,7 @@
 Темы используются в проектах достаточно редко, поэтому правила темы не входят в основные категории. Некоторые проекты могут требовать наличия тем — например, Yahoo! Mail, над которым я работал.
 
 ## Темы
-Возможно это очевидно, но тема определяет цвета и изображения, которые создают внешний вид вашего приложения или сайта. Отделение тем в отдельный набор стилей позволяет легко заменять одни темы на другие.
+Возможно, это очевидно, но тема определяет цвета и изображения, которые создают внешний вид вашего приложения или сайта. Отделение тем в отдельный набор стилей позволяет легко заменять одни темы на другие.
 
 Темы могут влиять на любую из основных категорий правил. Они могут переопределять базовые стили — например, цвет ссылок по умолчанию. Они могут менять различные свойства модулей — цвета, рамки. Они могут разными способами влиять на вёрстку. Также они могут влиять на то, как выглядят состояния.
 
@@ -22,7 +22,7 @@
 }
 ```
 
-Темы могут иметь классы, ясно дающие понять, какие стили являются частью темы, а какие нет. Однако, просто наличия отдельного файла темы должно быть достаточно.
+Темы могут иметь классы, ясно дающие понять, какие стили являются частью темы, а какие нет. Однако просто наличия отдельного файла темы должно быть достаточно.
 
 В Yahoo! Mail, чтобы поддерживать согласованность между файлами тем (их больше 50), мы используем Mustache-шаблон для нашего CSS, позволяющий нам задать определённое количество значений цвета, задать фоновое изображение и создать итоговый CSS-файл для публикации проекта.
 
