Update 11. Selector Performance.md
пунктуационные правки

--- a/3. Aspects of SMACSS/11. Selector Performance.md
+++ b/3. Aspects of SMACSS/11. Selector Performance.md
@@ -1,5 +1,5 @@
 # Производительность селекторов
-В моей работе мне часто приходится исследовать производительность. Мы используем некоторое количество инструментов для поиска слабых мест нашего приложения. Одним из этих инструментов является [Google Page Speed](http://code.google.com/speed/page-speed). Этот инструмент предоставляет рекомендации по улучшению JavaScript и по увеличению скорости отрисовки страницы. Перед тем, как мы погрузимся в эти рекомендации, нам потребуется понять, как браузеры обрабатывает CSS.
+В моей работе мне часто приходится исследовать производительность. Мы используем некоторое количество инструментов для поиска слабых мест нашего приложения. Одним из этих инструментов является [Google Page Speed](http://code.google.com/speed/page-speed). Этот инструмент предоставляет рекомендации по улучшению JavaScript и по увеличению скорости отрисовки страницы. Перед тем как мы погрузимся в эти рекомендации, нам потребуется понять, как браузеры обрабатывает CSS.
 
 ## Как обрабатывается CSS
 ### Стиль элемента обрабатывается при создании элемента
