--- a/2. Core/9. Changing State.md
+++ b/2. Core/9. Changing State.md
@@ -29,7 +29,7 @@ $('.btn-close').click(function(){
 ```
 Пример с jQuery вешает обработчик на клик каждому элементу с классом `.btn-close`, который должен искать среди родителей элемент с классом .dialog и добавлять ему класс .is-hidden.
 
-_ __От переводчика__: на самом деле он найдет все `.dialog` выше текущего элемента. Так работает parents. Т.е в структуре _
+ __От переводчика__: _на самом деле он найдет все `.dialog` выше текущего элемента. Так работает parents. Т.е в структуре_
 
 `.dialog>.dialog>.dialog>.btn-close` 
 
@@ -134,7 +134,7 @@ $('#btn-new').click(function(){
 2. Облегчения перехода между двумя состояниями
 
 
-&nbsp;* **От переводчика:** Поддержка селекторов по атрибутам есть уже с ie8+(http://caniuse.com/#feat=css-sel2). Так же есть прикольный селектор `[name~=val]`, который ищет совпадение в списке,(и который используется в AMCSS) разделенным пробеломю Используется примерно так:*
+**От переводчика:** _Поддержка селекторов по атрибутам есть уже с ie8+(http://caniuse.com/#feat=css-sel2). Так же есть прикольный селектор `[name~=val]`, который ищет совпадение в списке,(и который используется в AMCSS) разделенным пробеломю Используется примерно так:_
 
 ```html
 <div data-state="pressed showed"></div> 
