replace pseudo-class to pseudoclass

--- a/2. Core/9. Changing State.md
+++ b/2. Core/9. Changing State.md
@@ -7,12 +7,12 @@
 Изменения состояния может быть представлено тремя вариантами:
 
 1. имя класса
-2. псевдо-класс
+2. псевдокласс
 3. медиа-запрос
 
 Изменение класса происходит из js по возникновению некоторого события(будь то наведение мышкой на что-то или нажатие клавиши на клавиатуры и т.д). Элемент получает новый класс и новое представление.
 
-Изменение псевдо-класса выполняется благодаря любому числу псевдоклассов. В этом случае мы не полагаемся на js. Этот способ по прежнему ограничен примением классов только к самому элементу, детям или соседям текущему элементу.
+Изменение псевдокласса выполняется благодаря любому числу псевдоклассов. В этом случае мы не полагаемся на js. Этот способ по прежнему ограничен примением классов только к самому элементу, детям или соседям текущему элементу.
 
 Наконец медиа-запросы описывает стили на различных размерах окна.
 
@@ -274,13 +274,13 @@ function showMessage (s) {
 
 Таким способом мы делаем разделение между стилями и поведением.
 
-## Изменение с помощью псевдо-классов
+## Изменение с помощью псевдоклассов
 
-Мы увидели, что можем использовать классы и атрибуты для обработки изменения состояния модуля. Тем не менее css предлагает нам массу псевдо-классов, которые могут помочь управлять состоянием.
+Мы увидели, что можем использовать классы и атрибуты для обработки изменения состояния модуля. Тем не менее css предлагает нам массу псевдоклассов, которые могут помочь управлять состоянием.
 
-В CSS2.1 три наиболее полезных псевдокласса: **:hover**, **:focus** и **:active**. CSS3 добавляет некоторое число новых псевдо-классов, большинство из которых связаны со структурой html(такие как **:nth-child** или **:last-child**). Есть так же ряд псевдоклассов CSS3, который реагируют на взаимодействие с формой(**:checked :disabled :enabled**)
+В CSS2.1 три наиболее полезных псевдокласса: **:hover**, **:focus** и **:active**. CSS3 добавляет некоторое число новых псевдоклассов, большинство из которых связаны со структурой html(такие как **:nth-child** или **:last-child**). Есть так же ряд псевдоклассов CSS3, который реагируют на взаимодействие с формой(**:checked :disabled :enabled**)
 
-По умолчанию состояние для модуля обычно определяется без псевдо-класса. Определить псевдо-класс как вторичное состояние модуля можно так:
+По умолчанию состояние для модуля обычно определяется без псевдокласса. Определить псевдокласс как вторичное состояние модуля можно так:
 
 ```css
 .btn {
@@ -327,7 +327,7 @@ function showMessage (s) {
 /* no need to define a different focus state */
 ```
 
-В последнем примере мы по сути 5 вариаций одного модуля: главный модуль, подмодуль и псевдо-классы, которые возможны. Это может оказаться еще сложнее когда мы используем вдовесок основанные на классах состояния:
+В последнем примере мы по сути 5 вариаций одного модуля: главный модуль, подмодуль и псевдоклассы, которые возможны. Это может оказаться еще сложнее когда мы используем вдовесок основанные на классах состояния:
 
 ```css
 .btn { ... }
@@ -348,7 +348,7 @@ function showMessage (s) {
 
 ## Изменение с помощью медиа-запросов
 
-Изменение состояния с помощью классов и псевдо-классов достаточно похожи. Медиа запросы же это совершенно другой подход к управлению состоянием, который ранее был возможен лишь с помощь скриптов. Адаптивный и отзывчивый дизайн реагируют на разные критерии в запросах. Медиа-запросы для печати, первые запросы, которые позволяли определить стили странички для печати. 
+Изменение состояния с помощью классов и псевдоклассов достаточно похожи. Медиа запросы же это совершенно другой подход к управлению состоянием, который ранее был возможен лишь с помощь скриптов. Адаптивный и отзывчивый дизайн реагируют на разные критерии в запросах. Медиа-запросы для печати, первые запросы, которые позволяли определить стили странички для печати. 
 
 Медиа-запросы могут быть для отдельного файл стилей, если использовать аттрибут media на элементе `link` или определены как @media блок внутри определнного стиля(тега, файла)
 
@@ -405,4 +405,4 @@ function showMessage (s) {
 
 ## Это все о состоянии
 
-Эта глава рассматривает три типа изменения состояния: с помощью классов, псевдо-классов и медиа-запросов. Взгляд на ваш интерфейс как на модули, которые имеют различные состояния поможет вам разделить стили лучше и создавать сайты, которые будет поддерживать.
+Эта глава рассматривает три типа изменения состояния: с помощью классов, псевдоклассов и медиа-запросов. Взгляд на ваш интерфейс как на модули, которые имеют различные состояния поможет вам разделить стили лучше и создавать сайты, которые будет поддерживать.
