--- a/2. Core/9. Changing State.md
+++ b/2. Core/9. Changing State.md
@@ -37,7 +37,7 @@ $('.btn-close').click(function(){
 
 В других случаях, изменение состояния может делать большИе изменения.
 
-Оснавная идея, что нажатие кнопки будет показывать меню. В этом случае кнопка меняет состояние на нажатое, а меню меняет свое состояние-отображение. Какие варианты у нас есть для реализации этих изменений? Это зависит в значительной степени от html структуры. Например, у нас в Yahoo меню загружается во время запроса и вставляется в верхней части DOM. Мы использовали соглашение имен, чтобы подключить два вместе**(*1)**.
+Основная идея, что нажатие кнопки будет показывать меню. В этом случае кнопка меняет состояние на нажатое, а меню меняет свое состояние-отображение. Какие варианты у нас есть для реализации этих изменений? Это зависит в значительной степени от html структуры. Например, у нас в Yahoo меню загружается во время запроса и вставляется в верхней части DOM. Мы использовали соглашение имен, чтобы подключить два вместе**(*1)**.
 
 __(*1)__ Вероятнее всего имеется ввиду соотвествие data-action с id меню.
 ```html
@@ -99,7 +99,7 @@ $('#btn-new').click(function(){
 .is-active .menu { display: block; }
 ```
 
-Проблема последнего примера в сильной привязке к html структуре. Ведь если меню не будет рядом с кнопкой, то и стили не будут применяться. Будем надеяться, что нам больше не понадобится добавлять кнопок в этот `.toolbar`
+Проблема последнего примера в сильной привязке к html структуре. Ведь если меню не будет рядом с кнопкой, то и стили не будут применяться. Ну будем надеяться, что нам больше не понадобится добавлять кнопок в этот `.toolbar`
 
 Другой подход заключается в применении класса `.is-active` к кнопке и изменении стиля меню с помощью селектора "+".
 
@@ -121,20 +121,21 @@ $('#btn-new').click(function(){
 
 Я предпочитаю этот подход, вместо `.is-active` на родителе, но решение попрежнему зависит от html структуры(важно, чтобы меню следовало после кнопки в разметке) и если вы можете контролировать свою разметку, то этот подход будет исправно работать.
 
-## Почему привязка состояния к структуре проблематична.
+#### Почему привязка состояния к структуре проблематична.
 
 Проблема в том, что мы не можем сразу понять, где должны быть стили, описывающие это состояние: рядом со стилями кнопки в css или стилями `.menu`?
 
 Все, что можно сказать наличие класса-состояния к каждому будет предпочтительнее. Ведь так вы создаете лучшее разделение между вашими модулями. Сайт становится проще поддерживать и масштабировать.
 
-## Обработка изменения состояния с помощью аттрибутов
+### Обработка изменения состояния с помощью аттрибутов
 
 Можно использовать селекторы аттрибутов `[data-attr='val']`, взависимости от вашей поддержки браузеров. Это может использоваться для:
+
 1. Изолирования состояния от классов модуля и вёрстки(*категория называется слой, но в переводе, который уже есть используется "вёрстка"*)
 2. Облегчения перехода между двумя состояниями
 
 
-**От переводчика:** _Поддержка селекторов по атрибутам есть уже с ie8+(http://caniuse.com/#feat=css-sel2). Так же есть прикольный селектор `[name~=val]`, который ищет совпадение в списке,(и который используется в AMCSS) разделенным пробеломю Используется примерно так:_
+**От переводчика:** _Поддержка селекторов по атрибутам есть уже с ie8+(http://caniuse.com/#feat=css-sel2). Так же есть прикольный селектор `[name~=val]`, который ищет совпадение в списке(и который используется в AMCSS), разделенным пробеломю Используется примерно так:_
 
 ```html
 <div data-state="pressed showed"></div> 
@@ -146,7 +147,7 @@ div[data-state~="invalid"]{background: red}
 
 Давайте посмотрим на пример кнопки, которая может быть в нескольких состояниях(нажатая и не прошедшая валидацию)
 
-Вы можете выбрать суб-модульное соглашение о наименовании состояний:
+Вы можете выбрать соглашение о наименовании состояний с подклассами:
 
 ```css
 .btn { color: #333; } 
@@ -187,7 +188,7 @@ $(".btn").bind("click", function(){
 
 Вы имеете разные пути для представления состояния.
 
-## Изменение состояния с анимацией на основе классов
+### Изменение состояния с анимацией на основе классов
 
 Анимации интересная штука и некоторые могут подумать, что они должны быть размещены в "вёрстке"(слое) — это не правильно на самом деле. В добавок запомните: css для стилизации, js поведения.
 
