separate css\html in second note

--- a/2. Core/9. Changing State.md
+++ b/2. Core/9. Changing State.md
@@ -139,7 +139,9 @@ $('#btn-new').click(function(){
 
 ```html
 <div data-state="pressed showed"></div> 
-/*И в css*/ 
+```
+
+```css
 div[data-state~="pressed"]{pointer-events: none}
 div[data-state~="invalid"]{background: red}
 ``` 
